--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
+        <meta charset="UTF-8">
         <title>Meu Resumo</title>
+        <link
+            rel="stylesheet"
+            href="./css/style.css"
+        />
     </head>
     <body>
-        <h1>Leandro Arruda</h1>
+        <h1 class="nome">Leandro Arruda</h1>
+        <hr/>
         <h2>Resumo profissional</h2>
-        <a>
+        <a id="resumo">
             Utilizando python no dia a dia desde 5 anos para qualquer tipo de tarefa, Python avançado, usando bibliotecas como pandas, opencv, json, django, selenium, entre outras.
             Experiência em C# .NET Php, MySql, apache
             Linguagem C, Java, Node.js, React, JavaScript entre outras tecnologias.<br/>
@@ -22,7 +28,6 @@
             Sicoob API, automações de relatórios usando chromedrive, 
             pandas entre outros.
         </a>
-        <hr/>
 
         <h3>Estágio de Dados Fratar Engenharia Consultiva</h3>
         <a>
@@ -30,13 +35,14 @@
             diversos. Uso de APIs, pandas, arquivos json entre outros.
         </a>
         <h2>Habilidades</h2>
-        <a>
-            HTML, CSS, Javascript, Node, React, PostgreSQL, Web3 e DApps.<br/>
-            Python(Pandas, TensorFlow, Yolo, Django, Request, Numpy, Matplolib, OpenCV, Selenium etc..)<br/>
-            Lógica de programação com maestria.
-            Excel Avançado(VBA)<br/>
-            Inglês Intermediário
-        </a>
+        <ul>
+            <li>HTML, CSS, Javascript, Node, React, PostgreSQL, Web3 e DApps.</li>
+            <li>Python(Pandas, TensorFlow, Yolo, Django, Request, Numpy, Matplolib, OpenCV, Selenium etc..)</li>
+            <li>Lógica de programação com maestria.</li>
+            <li>Excel Avançado(VBA)</li>
+            <li>Inglês Intermediário</li>
+        </ul>
+        <hr/>
         <h2>Projetos</h2>
         <a href="Meus Projetos.html">Meus Projetos</a>
         <h2>Contato</h3>
