--- a/Projeto 1.html
+++ b/Projeto 1.html
@@ -53,10 +53,14 @@
                 <li>ES6 Features - const, let, arrow functions () => {}</li>
                 <li>Single Page Application (SPA) - Navegação sem recarregar a página</li>
                 <li>Sistema de Chat em Tempo Real - Com polling a cada 3 segundos</li>
+                <li>Sessions PHP (session_start()) - Para gerenciamento de sessões de usuário</li>
+                <li>password_verify() - Função do PHP para verificação segura de senhas hash</li>
+                <li>CSS - Para estilização da interface</li>
             </ul>
         </p>
         <img src=".\image\ChatBot.png">
         <img src=".\image\Chat.png">
         <img src=".\image\JavaScript.png">
+        <img src=".\image\Login.png">
     </body>
 </html>
